Added statistics on order progress over time